# damask-remap

./: .gitignore  LICENSE  README.md  environment.yml  myrun.yaml  pyproject.toml
legacy/99deformationRemap/Deform99/: material_seg1.yaml  material_seg2.yaml  remapapp.py  rolling.load.yaml  rolling.load_seg1.yaml
legacy/99deformationRemap/NoDeform99/: material.yaml  material_seg2.yaml  remapapp.py  rolling.load_seg2.yaml
legacy/ComplexPath/Deform/: remapdeformadaptive.py  remapdeformadaptive2.py
legacy/ComplexPath/NoDeform/: remapnodeformadaptive.py  remapnodefromAdaptive2.py
legacy/referenceRemap/Deform/: 1to1remappingdeform.py  rolling.load.yaml
legacy/referenceRemap/NoDeform/: 1to1remapping.py  numerics.yaml
src/damask_remap/: analyze.py  cli.py  config.py  generate.py  remap.py  simulate.py
tests/: check_run.py
